--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,80 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+/* src/index.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  user-select: none;
+}
+.app{
+  min-height: 100vh;
+}
+img{
+  width: 100%;
+  height: 100%;
+}
+main{
+  /* &::-webkit-scrollbar{
+    display: none;
+  } */
+}
+section{
+  scroll-snap-type: y mandatory;
+  overflow-x: hidden;
+  min-height: 100vh;
+  padding-top: 10vh;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.section-content{
+  scroll-snap-align: start;
+
+  max-width: 1200px;
+  min-height: inherit;
+  width: 100%;
+}
+.desktop-menu{
+  display: none;
+}
+@media (max-width:700px) {
+  .desktop-menu{
+    display: block;
+  }
+  .header-content{
+    position: relative;
+    padding: 0px 5%;
+  }
+  .section-content{
+    padding: 0px 5%;
+  }
+  nav{
+    position: absolute;
+    top: 0vh;
+    background-color: black;
+    color: white;
+    height: 100vh;
+    width: 50%;
+    left: 100%;
+    transition: all 3s;
+
+    flex-direction: column;
+    
+  }
+  nav.clicked{
+    left: 50%;
+  }
+  nav ul{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    gap: 20px;
+  }
 }
