--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -50,8 +50,8 @@
 
 .skill-icon {
   position: absolute;
-  width: 100px; /* Adjust size of skill icons */
-  height: 100px;
+  width: calc(100%/3); /* Adjust size of skill icons */
+  height: calc(100%/3);
   background-size: 70px;
   background-repeat: no-repeat;
   background-position: center;
@@ -82,7 +82,10 @@
   background-image: url('../../assets/c--4.svg'); /* Replace with actual icon path */
   transform: translate(200px,200px);
 }
-
+.me{
+    /* width: 100%; */
+    display: none;
+}
 @keyframes rotate-container {
     0% {
       transform: rotate(0deg);
@@ -90,4 +93,31 @@
     100% {
       transform: rotate(360deg);
     }
+  }
+
+  @media (max-width:700px) {
+    /* home */
+    .section-content.home{
+        display: flex;
+        flex-direction: column;
+    }
+    .section-content.home .img{
+        margin-top: 5vh;
+        border: 5px solid;
+        height: 180px;
+        width: 180px;
+        background-image: url('./my-pics.png');
+        background-size: 300px;
+        background-repeat: no-repeat;
+        background-position-x: center;
+        background-position-y: -20px;
+        border-radius: 50%;
+        margin-left: auto;
+
+    }
+    .section-content.home .intro .name{
+        font-size: 3.0rem;
+    }
+    /* projects */
+
   }
