--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -1,6 +1,6 @@
 main{
   min-height: 100vh;
-  background-color: #00000056;
+  /* background-color: #00000056; */
   /* margin-top: 10vh; */
   /* padding-top: 15vh; */
 }
