--- a/src/Components/Main/Home/home.css
+++ b/src/Components/Main/Home/home.css
@@ -160,6 +160,14 @@ div button{
 
 
 @media (max-width:600px) {
+    .float1{
+        top: 60vh;
+        left: 10%;
+    }
+    .float2{
+        top: 50vh;
+        right: -10px;
+    }
     .write{
         display: flex;
         flex-direction: column;
@@ -175,6 +183,10 @@ div button{
         flex-direction: column;
         align-items: center;
     
+    }
+    .h1-not{
+        margin-top: 0vh;
+        font-size: 4rem;
     }
     .section-content{
         min-height: 100vh;
