--- a/src/Components/Slider/slider.css
+++ b/src/Components/Slider/slider.css
@@ -1,8 +1,9 @@
 .slider{
     display: flex;
-    width: 100vw;
+    max-width: 1200px;
+    margin: 0 auto ;
     min-height: 100vh;
-    border: 2px solid;
+    /* border: 2px solid; */
     position: relative;
     overflow: hidden;
 }
@@ -30,34 +31,47 @@
 .slides{
     display: flex;
     width: 300%;
+    transition: all 1.5s ease-in;
 }
 .slide{
-    width: 100vw;
+    width: 1200px;
     min-height: 100vh;
-}
-.slides>.slide:first-child{
-    background-color: red;
     display: flex;
     flex-wrap: wrap;
 }
+.slides>.slide:first-child{
+    /* background-color: red; */
+   
+}
 .box{
     flex: 1 1 300px;
-    border: 2px solid;
+    /* border: 2px solid; */
 }
 .left-box{
-    background-color: orange;
-    min-height: 100vh;
-}
-.right-box{
-    background-color: purple;
     min-height: 100vh;
 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+}
+.left-box>img{
+    width: 100%;
+    height: 80%;
+    transform: scale(1.5);
+}
+.right-box{
+    min-height: 100vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 
 .slides>.slide:nth-child(2){
-    background-color: greenyellow;
+    /* background-color: greenyellow; */
 }
 .slides>.slide:nth-child(3){
-    background-color: blue;
+    /* background-color: blue; */
 }
