--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,11 @@
 .app{
   min-height: 100vh;
 }
+section{
+  min-height: 100vh;
+}
+.section-content{
+  max-width: 1200px;
+  margin: 0 auto;
+  min-height: 100vh;
+}
