--- a/src/index.css
+++ b/src/index.css
@@ -16,9 +16,10 @@
 }
 section{
   min-height: 100vh;
+  /* border: 2px solid; */
 }
 .section-content{
   max-width: 1200px;
   margin: 0 auto;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
